assets/css/style.css
html{
    scroll-behavior: smooth;
}
/*
body{
    margin-bottom: 60px;
    overflow-x: hidden;
    
}

.nav-link{
    color: white;
}
nav{
    background-color: #22313F;
    z-index: 1000;
}
.navbar-toggler-icon{
    color: white;
    padding-top: 6px;
}
.sticky {
    position: fixed;
    top: 0;
    width: 100%;
} 
.sticky + .content {
    padding-top: 60px;
}
*/

/*LANDING SECTION*/
.landing-page{
    background-image: url(../images/seattle-skyline.jpg);
    background-size: cover; 
    height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
    text-align: center;
}
.landing-text{
    color: white;
    text-shadow: 1px 1px 2px black;
    margin-bottom: 10vh;
}
.landing-btn {
	background-color: transparent !important;
	border: 2px solid white;
	border-radius: 0px;
	width: 150px;
    font-size: 17px;
}

.landing-btn:hover {
	border: 2px solid white;
	background-color: white !important;
	border-radius: 0px;
	color: black;
}


/*WHAT WE DO SECTION*/
.what-we-do{
    background-color: black;
    color: white;
}


/*WHO WE ARE SECTION*/
.about-section{
   height: 100%;
}
#about-hdr{
    text-align: center;
    margin-bottom: 35px;
}
.about-icon-row{
    justify-content: space-between;
    text-align: center;
}
.about-icon{
    width: 150px;
    height: 150px;
    border-radius: 50%;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    text-align: center;
    color: black;
    border: 2px solid black;
    font-size: 16px;
    font-weight: 700;
    margin: 0 auto ;
    display: flex;
    justify-content: center;
    align-items: center;
}
.about-txt{
    color: black;
    text-align: center;
}
.about-button-container{
    display: flex;
    justify-content: center;
    margin-bottom: 5vh;
}
.about-button{
    background-color: transparent !important;
    border: 2px solid black;
    color: black;
	border-radius: 0px;
    font-size: 17px;
    margin-top: 3vh;
}
.about-button:hover {
	border: 2px solid black;
	background-color: black !important;
	border-radius: 0px;
	color: white;
}

/*CONTACT SECTION*/

.bottom-form-row{
    margin-top: 3vh;
}

.contact-btn {
	background-color: transparent !important;
    border: 2px solid black;
    color: black;
	border-radius: 0px;
	width: 150px;
    font-size: 17px;
    margin-top: 3vh;
}

.contact-btn:hover {
	border: 2px solid black;
	background-color: black !important;
	border-radius: 0px;
	color: white;
}
.button-txt{
    text-align: center;
    margin-left: 1vw;
}

.profile-pic{
    width: 500px;
    height: auto;
}
.profile-pic2{
    width: 265px;
    height: auto;
}

.circle {
    width: 35px;
    height: 35px;
    border-radius: 50%;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    text-align: center;
    border: 2px solid black;
    color: black;
    font-size: 16px;
    text-transform: uppercase;
    font-weight: 700;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
  }
.circle:hover {
    border: 2px solid black;
	background-color: black !important;
	color: white;
  }

.contact-icon{
    align-items: center;
}

.contact-button-section{
    display: flex;
    justify-content: center;
}
.contact-section{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 10vh;
    height: 60vh;
}

.contact-title{
    text-align: center;
}

.form-container{
    width: 60%;
}

.social-container{
    justify-content: center;
    text-align: center;
}

